--- a/front_end/src/Styles/Color.scss
+++ b/front_end/src/Styles/Color.scss
@@ -1,11 +1,4 @@
-$dark: #1a1b26;
-$dark-purple: #24283b;
-$purple-grey: #414868;
-$cyan: #2ac3de;
-$cream: #cfc9c2;
-$purple: #bb9af7;
-$red: #f7768e;
-$cyan-light: #b4f9f8;
-$cyan-green: #73daca;
-$blue: #7aa2f7;
-$green : #9ece6a;
+$dark-blue: #071330;
+$midnight-blue: #0c4160;
+$blue-grey: #738fa7;
+$misty-blue: #c3ceda;
