created basic layout of nav

--- a/front_end/src/App.scss
+++ b/front_end/src/App.scss
@@ -7,4 +7,29 @@
 .App {
   width: 100vw;
   height: 100vh;
+  display: grid;
+  grid-template-rows: 10% 75% 15%;
+
+  .header {
+    display: grid;
+    grid-template-columns: 15% 15% 40% 15% 15% ;
+    grid-template-rows: 100%;
+    justify-items: center;
+    align-items: center;
+
+    img {
+      height: 40%;
+      width: auto;
+    }
+
+  }
+
+  .main {
+    
+  }
+
+  .footer {
+    
+  }
+
 }
