Added some links and styling

--- a/front_end/src/Components/Nav/Nav.scss
+++ b/front_end/src/Components/Nav/Nav.scss
@@ -1,4 +1,5 @@
 .header {
+    background-color: #c38370;
     display: grid;
     grid-template-columns: 15% 15% 40% 15% 15% ;
     grid-template-rows: 100%;
