--- a/front_end/src/Components/Nav/Nav.scss
+++ b/front_end/src/Components/Nav/Nav.scss
@@ -5,6 +5,8 @@
     grid-template-rows: 100%;
     justify-items: center;
     align-items: center;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 
     img {
       height: 40%;
