--- a/front_end/src/Components/Footer/Footer.scss
+++ b/front_end/src/Components/Footer/Footer.scss
@@ -13,9 +13,18 @@
         display: flex;
         justify-content: space-evenly;
 
-        img {
-            height: auto;
-            width: 30%;
+        a {
+
+            width: 100%;
+            height: 100%;
+            display: inherit;
+            justify-content: inherit;
+            align-items: inherit;
+
+            img {
+                height: 40px;
+                width: auto;
+            }
         }
     }
 
