Item card autoresize and stylyng done

--- a/front_end/src/App.scss
+++ b/front_end/src/App.scss
@@ -32,6 +32,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    position: relative;
     
     &__background {
       width: 98%;
