--- a/front_end/src/Pages/ItemDisplayer/ItemDisplayer.scss
+++ b/front_end/src/Pages/ItemDisplayer/ItemDisplayer.scss
@@ -2,11 +2,41 @@
 
     width: 100%;
     height: 100%;
-    display:flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    position: absolute;
-    padding-top: 5%;
-    overflow-y: scroll;
+    display: grid;
+    grid-template-rows: 90% 10%;
+    grid-template-areas: 
+        "cards"
+        "sections";
+    justify-items:center;
+    align-items: center;
+
+    &__sections {
+        z-index: 3;
+        grid-area: sections;
+        width: 100%;
+        height: 100%;
+        display:flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        align-self: center;
+        position: relative;
+        overflow-y: scroll;
+    }
+    
+
+    &__cards {
+        width: 100%;
+        height: 100%;
+        display:flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        position: absolute;
+        padding-top: 5%;
+        overflow-y: scroll;
+        z-index: 0;
+        grid-area: cards;
+    }
+
 }
