--- a/front_end/src/App.scss
+++ b/front_end/src/App.scss
@@ -33,6 +33,8 @@
     justify-content: space-evenly;
     align-items: center;
     position: relative;
+    padding-top: 3%;
+    overflow: hidden;
     
     &__background {
       width: 98%;
