--- a/front_end/src/Pages/ItemDisplayer/ItemDisplayer.scss
+++ b/front_end/src/Pages/ItemDisplayer/ItemDisplayer.scss
@@ -32,8 +32,7 @@
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-around;
-        position: absolute;
-        padding-top: 5%;
+        position: relative;
         overflow-y: scroll;
         z-index: 0;
         grid-area: cards;
